gitops/manifests/argocd-routing/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: ingress-system
      sectionName: https-argocd
  hostnames:
    - argocd.ahaouari.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
